packages/cargo_tools_vscode_macros/tests/ui/state_value_named_fields.stderr
error: StateValue can only be derived for tuple structs, not structs with named fields
 --> tests/ui/state_value_named_fields.rs:5:8
  |
5 | struct NamedFields {
  |        ^^^^^^^^^^^
